Added clarifying comments and improved code readability

--- a/midi_to_wav.ipynb
+++ b/midi_to_wav.ipynb
@@ -50,51 +50,37 @@
     }
    ],
    "source": [
-    "#!/usr/bin/env python\n",
-    "# coding: utf-8\n",
+    "# This script converts MIDI files from the dataset described in the paper into WAV files,\n",
+    "# enabling the use of the pipeline described in the paper.\n",
     "\n",
-    "# In[1]:\n",
-    "\n",
-    "\n",
-    "# sphinx_gallery_thumbnail_number = 6\n",
     "from pathlib import Path\n",
-    "import re\n",
     "import os\n",
+    "import re\n",
     "import subprocess\n",
     "\n",
-    "import eelbrain\n",
+    "import numpy as np\n",
     "from scipy.io import loadmat\n",
-    "import eelbrain.datasets._alice\n",
+    "from scipy.signal import resample\n",
     "from matplotlib import pyplot\n",
+    "\n",
     "import mne\n",
     "from mne.channels import make_dig_montage\n",
-    "import numpy as np\n",
     "from mne import find_events\n",
-    "from scipy.signal import resample\n",
+    "import eelbrain\n",
+    "import eelbrain.datasets._alice\n",
     "\n",
-    "# Define the dataset root; this will use ~/Data/Alice, replace it with the\n",
-    "# proper path if you downloaded the dataset in a different location\n",
-    "DATA_ROOT = Path('FYP/music data')\n",
-    "\n",
-    "# Define some paths that will be used throughout\n",
-    "STIMULUS_DIR = DATA_ROOT / 'diliBach_midi_4dryad'\n",
-    "EEG_DIR = DATA_ROOT / 'diliBach_4dryad_CND'\n",
-    "\n",
-    "# Load one subject's raw EEG file\n",
-    "SUBJECT = 'Sub1'\n",
-    "LOW_FREQUENCY = 0.5\n",
-    "HIGH_FREQUENCY = 20\n",
-    "\n",
-    "\n",
-    "# In[2]:\n",
-    "\n",
-    "\n",
-    "import numpy as np\n",
-    "from pathlib import Path\n",
     "import pretty_midi\n",
     "import soundfile as sf  # Native WAV writing\n",
     "\n",
+    "\n",
+    "# Define the dataset root; replace it with the proper path if you downloaded the dataset in a different location\n",
+    "DATA_ROOT = Path('FYP/music data')\n",
+    "\n",
+    "# Define path that will be used throughout\n",
+    "STIMULUS_DIR = DATA_ROOT / 'diliBach_midi_4dryad'\n",
+    "\n",
     "SOUNDFONT_PATH = Path(\"path/to/your/soundfont.sf2\")  # Optional but better results\n",
+    "\n",
     "\n",
     "def convert_midi_to_wav(fs=44100, gain=0.1, trim_thresh=1e-4):\n",
     "    \"\"\"Convert MIDI to WAV, normalize amplitude, and trim leading silence.\"\"\"\n",
@@ -124,7 +110,7 @@
     "                start_idx = nonzero_idx[0]\n",
     "                audio = audio[start_idx:]\n",
     "            else:\n",
-    "                print(f\"⚠ No audible content in {midi_file.name}\")\n",
+    "                print(f\"No audible content in {midi_file.name}\")\n",
     "                continue\n",
     "\n",
     "            # Normalize amplitude\n",
@@ -141,19 +127,9 @@
     "            print(f\"✗ Failed to convert {midi_file.name}: {e}\")\n",
     "\n",
     "\n",
-    "\n",
-    "\n",
     "# Convert MIDI files to WAV\n",
     "convert_midi_to_wav()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f3c2c99f-3bed-40af-9942-a9e8b4ded435",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -172,7 +148,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.2"
+   "version": "3.12.6"
   }
  },
  "nbformat": 4,
